@@ -4,6 +4,10 @@ Changelog
 1.0b8 - unreleased
 ------------------
 
+* Setup folder permissions in the same way as Archetypes so copy / paste /
+  rename work consistently with the rest of Plone.
+  [elro]
+
 * Redirect to immediate_view after edit.
   [elro]
 
